# imgtool

./: README.md  pyproject.toml
imgsh/: publish.py
imgtool/cli/: gui_cmd.py  main.py
imgtool/gui/: app.py  resize_view.py
